# fastapi-post-discharge-system-backend

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CLEANUP_SUMMARY.md  CLOUDINARY_AND_VISION_SETUP.md  CLOUDINARY_INTEGRATION.md  DATABASE_MIGRATION_GUIDE.md  DUAL_PDF_STORAGE.md  EXTRACTION_FLOW.md  EXTRACTION_FLOW_COMPARISON.md  FINAL_IMPLEMENTATION_GUIDE.md  FINAL_STATUS.md  IMPLEMENTATION_CHANGES_SUMMARY.md  INTEGRATION_COMPLETE.md  LANGGRAPH_DOCS.md  NAMING_CONVENTION.md  PATIENT_ID_INTEGRATION.md  PDF_DETECTION_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REGISTRATION_FRONTEND_UPDATE.md  TASK7_COMPLETION_SUMMARY.md  VERCEL_DEPLOYMENT_READY.md  generate_graph_png.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 02bd24adc948_added_cascade_logic_to_recurrence_types.py  03dd844eb029_added_cascade_logic_to_recurrence_types.py  (+30 more)
controllers/: auth_controller.py  discharge_pdf_controller.py  fetch_patient_controller.py  login_controller.py  logout_controller.py  patient_friendly_report_controller.py  register_controller.py
core/: chunking.py  config.py  database.py  enums.py  img_to_txt_llm_init.py  llm_init.py  scheduler.py  security.py  txt_to_txt_llm_init.py
models/: __init__.py  bill.py  bill_description.py  chat_history.py  discharge_history.py  doctor.py  medication.py  medication_schedule.py  patient.py  patient_doctor.py  recurrence_type.py  refresh_token.py  report.py  report_description.py  telegram_session.py
output/: results.txt
routes/: admin_routes.py  auth_routes.py  bill_routes.py  chat_routes.py  cron_reminder.py  discharge_routes.py  fetch_patient_routes.py  icd_routes.py  ird_routes.py  login_routes.py  logout_routes.py  patient_friendly_report_routes.py  patient_routes.py  prescription_routes.py  register_routes.py  reminder_routes.py  report_routes.py  telegram_webhook.py
schemas/: __init__.py  admin_schemas.py  bill_schemas.py  discharge_schemas.py  login.py  patient_friendly_report_schemas.py  patient_profile_schemas.py  patient_schemas.py  prescription_schemas.py  register.py  report_schemas.py
services/: admin_service.py  auth_service.py  discharge_pdf_service.py  discharge_service.py  fetch_patient_service.py  ird_service.py  login_service.py  logout_service.py  patient_profile_service.py  pdf_generator.py  register_service.py
(+55 files in other folders)
