[project]
name = "vercel-fastapi-starter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.18.4",
  "cloudinary>=1.44.1",
  "fastapi>=0.121.0",
  "fastapi-swagger-dark>=0.0.9",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.13.1",
  "pydantic[email]>=2.12.5",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.22",
  "sqlalchemy>=2.0.47",
  "uvicorn>=0.34.0",
]
