[project]
name = "vercel-fastapi-starter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.18.4",
  "argon2-cffi>=25.1.0",
  "apscheduler>=3.11.2",
  "cloudinary>=1.44.1",
  "fastapi>=0.121.0",
  "fastapi-swagger-dark>=0.0.9",
  "huggingface-hub>=1.5.0",
  "httpx>=0.27.0",
  "langchain-groq>=1.1.2",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "langsmith>=0.7.10",
  "passlib[bcrypt]>=1.7.4",
  "pdf2image>=1.17.0",
  "pdfplumber>=0.11.9",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.13.1",
  "pydantic[email]>=2.12.5",
  "pymupdf>=1.27.1",
  "pypdf>=6.7.5",
  "python-dotenv>=1.0.1",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.22",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.47",
  "tqdm>=4.67.3",
  "twilio>=9.10.2",
  "uvicorn>=0.34.0",
  "yarl>=1.23.0",
  # ICD-10 RAG
  "pinecone>=3.0.0",
  "sentence-transformers>=3.0.1",
  # IRD PDF generation
  "reportlab>=4.2.0",
]
